[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/SpriteSet.png" type="Texture" id=1]
[ext_resource path="res://scenes/Battle_GUI.gd" type="Script" id=2]
[ext_resource path="res://assets/images/target.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/dynamic_bebas.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/construct-button.png" type="Texture" id=5]
[ext_resource path="res://assets/images/save-button.png" type="Texture" id=6]
[ext_resource path="res://assets/images/play-button.png" type="Texture" id=7]
[ext_resource path="res://scenes/BuildingMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/exit-button.png" type="Texture" id=9]
[ext_resource path="res://assets/images/settings-button.png" type="Texture" id=10]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 110.0
color = Color( 0.262745, 0.164706, 0.164706, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="ColorRect" parent="."]
visible = false
margin_top = 241.0
margin_right = 400.0
margin_bottom = 331.0
color = Color( 0.262745, 0.164706, 0.164706, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveGameButton" type="TextureButton" parent="SettingsMenu"]
margin_left = 100.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SettingsMenu/SaveGameButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -3.0
margin_right = 101.0
margin_bottom = 99.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )

[node name="ExitGameButton" type="TextureButton" parent="SettingsMenu"]
margin_left = 250.0
margin_top = 20.0
margin_right = 350.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SettingsMenu/ExitGameButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -3.0
margin_right = 101.0
margin_bottom = 99.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )

[node name="SelectionPreview" type="Node2D" parent="."]
position = Vector2( 190, 9 )

[node name="ColorRect" type="ColorRect" parent="SelectionPreview"]
margin_left = -1.0
margin_top = -1.0
margin_right = 51.0
margin_bottom = 51.0
color = Color( 0.239216, 0.317647, 0.619608, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="SelectionPreview"]
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="SelectionPreview/Button"]
visible = false
position = Vector2( 50, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 50, 0, 50, 100 )

[node name="ResetGameButton" type="Button" parent="."]
visible = false
margin_left = 50.0
margin_top = 100.0
margin_right = 153.0
margin_bottom = 140.0
rect_rotation = 90.0
custom_fonts/font = ExtResource( 4 )
text = "Reset game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameButton" type="Button" parent="."]
visible = false
margin_left = 10.0
margin_top = 300.0
margin_right = 110.0
margin_bottom = 340.0
rect_rotation = -90.0
custom_fonts/font = ExtResource( 4 )
text = "Load game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingMenu" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 0, 540 )

[node name="StartWaveButton" type="TextureButton" parent="."]
margin_left = 110.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 110.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="StartWaveButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 101.0
margin_bottom = 101.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingMenuButton" type="TextureButton" parent="."]
margin_left = 250.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 110.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BuildingMenuButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 101.0
margin_bottom = 101.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenuButton" type="TextureButton" parent="."]
margin_left = 340.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 110.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SettingsMenuButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -1.0
margin_right = 101.0
margin_bottom = 101.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 4 )
text = "Score: 0
Gold: 0
Level: 0
Lives: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverMenu" type="ColorRect" parent="."]
visible = false
margin_right = 400.0
margin_bottom = 720.0
color = Color( 0.262745, 0.164706, 0.164706, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="TextureButton" parent="GameOverMenu"]
margin_left = 180.0
margin_top = 260.0
margin_right = 280.0
margin_bottom = 360.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameOverMenu/ExitGameButton"]
show_behind_parent = true
margin_left = -1.0
margin_top = -3.0
margin_right = 101.0
margin_bottom = 99.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.611765 )

[node name="Message" type="Label" parent="GameOverMenu"]
margin_left = 160.0
margin_top = 220.0
margin_right = 244.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 4 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="close_menu" from="BuildingMenu" to="." method="_on_BuildingMenu_close_menu"]
